--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="scripts/prettify/run_prettify.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>MDConverter - Converter Framework for MDSimulations</title>
+    <title>MDConverter - Converter Framework for MDSimulations input files</title>
 </head>
 
 <body>
