--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h1 id="project_title">MDConverter</h1>
 
-        <h2 id="project_tagline">Converter Framework for MDSimulations</h2>
+        <h2 id="project_tagline">Converter Framework for MDSimulations input files</h2>
     </header>
 </div>
 
